# nyko_robot

./: CMakeLists.txt  README.md  USING_REUSABLE_BEHAVIORS_EXAMPLE.md  package.xml
behaviors/: dummy_cross.xml  dummy_guide.xml  dummy_idle.xml  dummy_recognise.xml  dummy_search.xml  dummy_state1.xml  dummy_state2.xml
config/: dummy_mission.yaml  dummy_mission_with_follow.yaml  guide_mission.yaml  robot_nico_skills.yaml  waiter_mission.yaml  waiter_mission_checking.yaml
include/robot_nico/: robot_nico_orchestrator.hpp
include/robot_nico/bt_nodes/: log_message_action.hpp
launch/: robot_nico.launch.py  robot_nico_llm.launch.py  robot_nico_mission_executor.launch.py  robot_nico_services.launch.py  robot_nico_with_follow.launch.py
src/: robot_nico_main.cpp  robot_nico_orchestrator.cpp
src/bt_nodes/: bt_plugins.cpp  log_message_action.cpp
